# sdl-tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  point.cpp  point.hpp
src/: board.cpp  board.hpp  gameState.hpp  main.cpp  point.cpp  winState.hpp  winStates.cpp
